examples/test/testpolicy7122.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7122
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key47: value12
      key27: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value14
          key21: value1
      podSelector:
        matchLabels:
          key8: value2
          key42: value38
          key25: value44
